--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
-baseURL = "https://example.com/"
-languageCode = "en-us"
-title = "My Hugo Site"
-theme = "ananke"
+{
+  "name": "my-gatsby-site",
+  "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "gatsby": "^3.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0"
+  },
+  "scripts": {
+    "develop": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve"
+  }
+}
